test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync-deprecated/generate-on-subresource-trigger/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: zk-kafka-address
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
