test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync-deprecated/generate-on-subresource-trigger/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/policy-name: zk-kafka-address
    generate.kyverno.io/policy-namespace: ""
    generate.kyverno.io/rule-name: k-kafka-address
    generate.kyverno.io/trigger-group: ""
    generate.kyverno.io/trigger-kind: PodExecOptions
    generate.kyverno.io/trigger-name: ""
    generate.kyverno.io/trigger-namespace: test-generate-exec
    generate.kyverno.io/trigger-version: v1
    somekey: somevalue
  name: zk-kafka-address
  namespace: test-generate-exec
