test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync-deprecated/generate-on-subresource-trigger/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-on-subresource-trigger
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: step-01
    try:
    - apply:
        file: namespace.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: zk-kafka-address
  - try:
    - assert:
        file: namespace-ready.yaml
  - name: step-02
    try:
    - command:
        args:
        - run
        - nginx
        - --image=nginx
        - -n
        - test-generate-exec
        entrypoint: kubectl
    - sleep:
        duration: 10s
    - command:
        args:
        - exec
        - -n
        - test-generate-exec
        - nginx
        - -it
        - --
        - ls
        entrypoint: kubectl
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
  - name: step-99
    try:
    - command:
        args:
        - delete
        - cpol
        - zk-kafka-address
        - --force
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
        timeout: 30s
    - command:
        args:
        - delete
        - pod
        - nginx
        - -n
        - test-generate-exec
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
        timeout: 30s
    - command:
        args:
        - delete
        - cm
        - zk-kafka-address
        - -n
        - test-generate-exec
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
        timeout: 30s
    - command:
        args:
        - delete
        - ns
        - test-generate-exec
        - --wait=true
        - --ignore-not-found=true
        entrypoint: kubectl
        timeout: 30s
